--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,12 @@ authors = ["hunter britten <huntergbritten@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+bs4 = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+black = "^21.5b2"
+flake8 = "^3.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
